markdown/ai/2.0.1/api/chat/deepseek-chat.md
---
title: "DeepSeek Chat"
source: "ROOT:api/chat/deepseek-chat.adoc"
---

# DeepSeek Chat

Spring AI supports the various AI language models from DeepSeek. You can interact with DeepSeek language models and create a multilingual conversational assistant based on DeepSeek models.

<a id="_prerequisites"></a>

## Prerequisites

You will need to create an API key with DeepSeek to access DeepSeek language models.

Create an account at [DeepSeek registration page](https://platform.deepseek.com/sign_up) and generate a token on the [API Keys page](https://platform.deepseek.com/api_keys).

The Spring AI project defines a configuration property named `spring.ai.deepseek.api-key` that you should set to the value of the `API Key` obtained from the API Keys page.

You can set this configuration property in your `application.properties` file:

```properties
spring.ai.deepseek.api-key=<your-deepseek-api-key>
```

For enhanced security when handling sensitive information like API keys, you can use Spring Expression Language (SpEL) to reference a custom environment variable:

```yaml
# In application.yml
spring:
  ai:
    deepseek:
      api-key: ${DEEPSEEK_API_KEY}
```

```bash
# In your environment or .env file
export DEEPSEEK_API_KEY=<your-deepseek-api-key>
```

You can also set this configuration programmatically in your application code:

```java
// Retrieve API key from a secure source or environment variable
String apiKey = System.getenv("DEEPSEEK_API_KEY");
```

<a id="_add_repositories_and_bom"></a>

### Add Repositories and BOM

Spring AI artifacts are published in the Spring Milestone and Snapshot repositories.
Refer to the [Artifact Repositories](../../getting-started.md#artifact-repositories) section to add these repositories to your build system.

To help with dependency management, Spring AI provides a BOM (bill of materials) to ensure that a consistent version of Spring AI is used throughout your entire project. Refer to the [Dependency Management](../../getting-started.md#dependency-management) section to add the Spring AI BOM to your build system.

<a id="_auto_configuration"></a>

## Auto-configuration

Spring AI provides Spring Boot auto-configuration for the DeepSeek Chat Model.
To enable it, add the following dependency to your project’s Maven `pom.xml` file:

```xml
<dependency>
    <groupId>org.springframework.ai</groupId>
    <artifactId>spring-ai-starter-model-deepseek</artifactId>
</dependency>
```

or to your Gradle `build.gradle` file.

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-starter-model-deepseek'
}
```

> [!TIP]
> Refer to the [Dependency Management](../../getting-started.md#dependency-management) section to add the Spring AI BOM to your build file.

<a id="_chat_properties"></a>

### Chat Properties

<a id="_retry_properties"></a>

#### Retry Properties

The prefix `spring.ai.retry` is used as the property prefix that lets you configure the retry mechanism for the DeepSeek Chat model.

| Property | Description | Default |
| --- | --- | --- |
| spring.ai.retry.max-attempts | Maximum number of retry attempts. | 10 |
| spring.ai.retry.backoff.initial-interval | Initial sleep duration for the exponential backoff policy. | 2 sec. |
| spring.ai.retry.backoff.multiplier | Backoff interval multiplier. | 5 |
| spring.ai.retry.backoff.max-interval | Maximum backoff duration. | 3 min. |
| spring.ai.retry.on-client-errors | If false, throws a NonTransientAiException, and does not attempt a retry for `4xx` client error codes | false |
| spring.ai.retry.exclude-on-http-codes | List of HTTP status codes that should not trigger a retry (e.g. to throw NonTransientAiException). | empty |
| spring.ai.retry.on-http-codes | List of HTTP status codes that should trigger a retry (e.g. to throw TransientAiException). | empty |

<a id="_connection_properties"></a>

#### Connection Properties

The prefix `spring.ai.deepseek` is used as the property prefix that lets you connect to DeepSeek.

| Property | Description | Default |
| --- | --- | --- |
| spring.ai.deepseek.base-url | The URL to connect to | `https://api.deepseek.com` |
| spring.ai.deepseek.api-key | The API Key | - |

<a id="_configuration_properties"></a>

#### Configuration Properties

> [!NOTE]
> Enabling and disabling of the chat auto-configurations are now configured via top level properties with the prefix `spring.ai.model.chat`.
>
> To enable, spring.ai.model.chat=deepseek (It is enabled by default)
>
> To disable, spring.ai.model.chat=none (or any value which doesn’t match deepseek)
>
> This change is done to allow configuration of multiple models.

The prefix `spring.ai.deepseek.chat` is the property prefix that lets you configure the chat model implementation for DeepSeek.

| Property | Description | Default |
| --- | --- | --- |
| spring.ai.deepseek.chat.enabled (Removed and no longer valid) | Enables the DeepSeek chat model. | true |
| spring.ai.model.chat | Enable DeepSeek chat model. | deepseek |
| spring.ai.deepseek.chat.base-url | Optionally overrides the spring.ai.deepseek.base-url to provide a chat-specific URL | `https://api.deepseek.com/` |
| spring.ai.deepseek.chat.api-key | Optionally overrides the spring.ai.deepseek.api-key to provide a chat-specific API key | - |
| spring.ai.deepseek.chat.completions-path | The path to the chat completions endpoint | `/chat/completions` |
| spring.ai.deepseek.chat.beta-prefix-path | The prefix path to the beta feature endpoint | `/beta` |
| spring.ai.deepseek.chat.model | ID of the model to use. You can use deepseek-v4-flash, deepseek-v4-pro, deepseek-chat or deepseek-reasoner. | deepseek-v4-flash |
| spring.ai.deepseek.chat.frequency-penalty | Number between -2.0 and 2.0. Positive values penalize new tokens based on their existing frequency in the text so far, decreasing the model’s likelihood to repeat the same line verbatim. | 0.0f |
| spring.ai.deepseek.chat.max-tokens | The maximum number of tokens to generate in the chat completion. The total length of input tokens and generated tokens is limited by the model’s context length. | - |
| spring.ai.deepseek.chat.presence-penalty | Number between -2.0 and 2.0. Positive values penalize new tokens based on whether they appear in the text so far, increasing the model’s likelihood to talk about new topics. | 0.0f |
| spring.ai.deepseek.chat.stop | Up to 4 sequences where the API will stop generating further tokens. | - |
| spring.ai.deepseek.chat.temperature | Which sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. We generally recommend altering this or top\_p, but not both. | 1.0F |
| spring.ai.deepseek.chat.top-p | An alternative to sampling with temperature, called nucleus sampling, where the model considers the results of the tokens with top\_p probability mass. So 0.1 means only the tokens comprising the top 10% probability mass are considered. We generally recommend altering this or temperature, but not both. | 1.0F |
| spring.ai.deepseek.chat.logprobs | Whether to return log probabilities of the output tokens or not. If true, returns the log probabilities of each output token returned in the content of the message. | - |
| spring.ai.deepseek.chat.top-logprobs | An integer between 0 and 20 specifying the number of most likely tokens to return at each token position, each with an associated log probability. logprobs must be set to true if this parameter is used. | - |
| spring.ai.deepseek.chat.thinking.type | Controls the switch between thinking mode and non-thinking mode. When set to `enabled`, the thinking mode is used; when set to `disabled`, the non-thinking mode is used. | - |
| spring.ai.deepseek.chat.reasoning-effort | Controls the reasoning effort level for the DeepSeek model. For normal requests, `high` is the default; for complex Agent-style requests (such as Claude Code, OpenCode), `max` is used automatically. | - |
| spring.ai.deepseek.chat.tool-callbacks | Tool Callbacks to register with the ChatModel. | - |

> [!NOTE]
> You can override the common `spring.ai.deepseek.base-url` and `spring.ai.deepseek.api-key` for the `ChatModel` implementations.
> The `spring.ai.deepseek.chat.base-url` and `spring.ai.deepseek.chat.api-key` properties, if set, take precedence over the common properties.
> This is useful if you want to use different DeepSeek accounts for different models and different model endpoints.

> [!TIP]
> All properties prefixed with `spring.ai.deepseek.chat` can be overridden at runtime by adding a request-specific [Runtime Options](#chat-options) to the `Prompt` call.

<a id="chat-options"></a>

## Runtime Options

The [DeepSeekChatOptions.java](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-deepseek/src/main/java/org/springframework/ai/deepseek/DeepSeekChatOptions.java) provides model configurations, such as the model to use, the temperature, the frequency penalty, etc.

On startup, the default options can be configured with the `DeepSeekChatModel(api, options)` constructor or the `spring.ai.deepseek.chat.*` properties.

At runtime, you can override the default options by adding new, request-specific options to the `Prompt` call.
For example, to override the default model and temperature for a specific request:

````java
ChatResponse response = chatModel.call(
    new Prompt(
        "Generate the names of 5 famous pirates. Please provide the JSON response without any code block markers such as ```json```.",
        DeepSeekChatOptions.builder()
            .withModel(DeepSeekApi.ChatModel.DEEPSEEK_V4_PRO.getValue())
            .withTemperature(0.8f)
        .build()
    ));
````

> [!TIP]
> In addition to the model-specific [DeepSeekChatOptions](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-deepseek/src/main/java/org/springframework/ai/deepseek/DeepSeekChatOptions.java), you can use a portable [ChatOptions](https://github.com/spring-projects/spring-ai/blob/main/spring-ai-model/src/main/java/org/springframework/ai/chat/prompt/ChatOptions.java) instance, created with the [ChatOptions#builder()](https://github.com/spring-projects/spring-ai/blob/main/spring-ai-model/src/main/java/org/springframework/ai/chat/prompt/DefaultChatOptionsBuilder.java).

<a id="_sample_controller_auto_configuration"></a>

## Sample Controller (Auto-configuration)

[Create](https://start.spring.io/) a new Spring Boot project and add the `spring-ai-starter-model-deepseek` to your pom (or gradle) dependencies.

Add an `application.properties` file under the `src/main/resources` directory to enable and configure the DeepSeek Chat model:

```application.properties
spring.ai.deepseek.api-key=YOUR_API_KEY
spring.ai.deepseek.chat.model=deepseek-v4-pro
spring.ai.deepseek.chat.temperature=0.8
```

> [!TIP]
> Replace the `api-key` with your DeepSeek credentials.

This will create a `DeepSeekChatModel` implementation that you can inject into your class.
Here is an example of a simple `@Controller` class that uses the chat model for text generation.

```java
@RestController
public class ChatController {

    private final DeepSeekChatModel chatModel;

    @Autowired
    public ChatController(DeepSeekChatModel chatModel) {
        this.chatModel = chatModel;
    }

    @GetMapping("/ai/generate")
    public Map generate(@RequestParam(value = "message", defaultValue = "Tell me a joke") String message) {
        return Map.of("generation", chatModel.call(message));
    }

    @GetMapping("/ai/generateStream")
	public Flux<ChatResponse> generateStream(@RequestParam(value = "message", defaultValue = "Tell me a joke") String message) {
        var prompt = new Prompt(new UserMessage(message));
        return chatModel.stream(prompt);
    }
}
```

<a id="_tool_calling"></a>

## Tool Calling

`DeepSeekChatModel` supports tool calling. The model can request tool execution but does not run tools itself — Spring AI handles execution.

For most applications, use `ChatClient` with the auto-registered `ToolCallingAdvisor` — see [Tool Calling](../tools.md). For low-level control where you drive the loop yourself, see [ChatModel Tool Calling](../tools/chatmodel-tool-calling.md).

<a id="_chat_prefix_completion"></a>

## Chat Prefix Completion

The chat prefix completion follows the Chat Completion API, where users provide an assistant’s prefix message for the model to complete the rest of the message.

When using prefix completion, the user must ensure that the last message in the messages list is a DeepSeekAssistantMessage.

Below is a complete Java code example for chat prefix completion. In this example, we set the prefix message of the assistant to "```python\\n" to force the model to output Python code, and set the stop parameter to \[‘`’\] to prevent additional explanations from the model.

````java
@RestController
public class CodeGenerateController {

    private final DeepSeekChatModel chatModel;

    @Autowired
    public ChatController(DeepSeekChatModel chatModel) {
        this.chatModel = chatModel;
    }

    @GetMapping("/ai/generatePythonCode")
    public String generate(@RequestParam(value = "message", defaultValue = "Please write quick sort code") String message) {
		UserMessage userMessage = new UserMessage(message);
		Message assistantMessage = DeepSeekAssistantMessage.builder().content("```python\\n").prefix(true).build();
		Prompt prompt = new Prompt(List.of(userMessage, assistantMessage), ChatOptions.builder().stopSequences(List.of("```")).build());
		ChatResponse response = chatModel.call(prompt);
		return response.getResult().getOutput().getText();
    }
}
````

<a id="_reasoning_support"></a>

## Reasoning support

You can use the `DeepSeekAssistantMessage` to get the CoT content generated by models supporting that feature.

```java
public void deepSeekReasoningExample() {
    DeepSeekChatOptions promptOptions = DeepSeekChatOptions.builder()
            .build();
    Prompt prompt = new Prompt("9.11 and 9.8, which is greater?", promptOptions);
    ChatResponse response = chatModel.call(prompt);

    // Get the CoT content generated by the model
    DeepSeekAssistantMessage deepSeekAssistantMessage = (DeepSeekAssistantMessage) response.getResult().getOutput();
    String reasoningContent = deepSeekAssistantMessage.getReasoningContent();
    String text = deepSeekAssistantMessage.getText();
}
```

<a id="_thinking_mode"></a>

### Thinking Mode

DeepSeek models support a switch between thinking mode and non-thinking mode.
The thinking mode can be controlled through the `Thinking` option, which accepts `Thinking.ENABLED` (thinking mode) or `Thinking.DISABLED` (non-thinking mode).
When thinking is disabled, the model does not produce any reasoning content.

```java
public void deepSeekThinkingExample() {
    DeepSeekChatOptions promptOptions = DeepSeekChatOptions.builder()
            .thinking(Thinking.DISABLED)
            .build();
    Prompt prompt = new Prompt("9.11 and 9.8, which is greater?", promptOptions);
    ChatResponse response = chatModel.call(prompt);

    DeepSeekAssistantMessage deepSeekAssistantMessage = (DeepSeekAssistantMessage) response.getResult().getOutput();
    // No reasoning content is produced when thinking is disabled
    String reasoningContent = deepSeekAssistantMessage.getReasoningContent();
    String text = deepSeekAssistantMessage.getText();
}
```

The thinking mode can also be toggled with the `enableThinking()` and `disableThinking()` builder convenience methods, or configured globally through the `spring.ai.deepseek.chat.thinking.type` property.

<a id="_reasoning_effort"></a>

### Reasoning Effort

DeepSeek models let you control the reasoning effort level through the `ReasoningEffort` option.
`ReasoningEffort.HIGH` is the default for normal requests, while `ReasoningEffort.MAX` is used automatically for complex Agent-style requests (such as Claude Code, OpenCode).

```java
public void deepSeekReasoningEffortExample() {
    DeepSeekChatOptions promptOptions = DeepSeekChatOptions.builder()
            .reasoningEffort(ReasoningEffort.MAX)
            .build();
    Prompt prompt = new Prompt("9.11 and 9.8, which is greater?", promptOptions);
    ChatResponse response = chatModel.call(prompt);

    DeepSeekAssistantMessage deepSeekAssistantMessage = (DeepSeekAssistantMessage) response.getResult().getOutput();
    String reasoningContent = deepSeekAssistantMessage.getReasoningContent();
    String text = deepSeekAssistantMessage.getText();
}
```

The reasoning effort can also be set with the `reasoningEffortHigh()` and `reasoningEffortMax()` builder convenience methods, or configured globally through the `spring.ai.deepseek.chat.reasoning-effort` property.

<a id="_reasoning_model_multi_round_conversation"></a>

## Reasoning Model Multi-round Conversation

In each round of the conversation, the model outputs the CoT (`reasoning_content`) and the final answer (`content`). In the next round of the conversation, the CoT from previous rounds is not concatenated into the context, as illustrated in the following diagram:

![Multimodal Test Image](https://raw.githubusercontent.com/spring-projects/spring-ai/v2.0.1/spring-ai-docs/src/main/antora/modules/ROOT/images/deepseek_r1_multiround_example.png)

<a id="_manual_configuration"></a>

## Manual Configuration

The [DeepSeekChatModel](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-deepseek/src/main/java/org/springframework/ai/deepseek/DeepSeekChatModel.java) implements the `ChatModel` and `StreamingChatModel` and uses the [Low-level DeepSeekApi Client](#low-level-api) to connect to the DeepSeek service.

Add the `spring-ai-deepseek` dependency to your project’s Maven `pom.xml` file:

```xml
<dependency>
    <groupId>org.springframework.ai</groupId>
    <artifactId>spring-ai-deepseek</artifactId>
</dependency>
```

or to your Gradle `build.gradle` file.

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-deepseek'
}
```

> [!TIP]
> Refer to the [Dependency Management](../../getting-started.md#dependency-management) section to add the Spring AI BOM to your build file.

Next, create a `DeepSeekChatModel` and use it for text generation:

```java
DeepSeekApi deepSeekApi = DeepSeekApi.builder()
        .apiKey(System.getenv("DEEPSEEK_API_KEY"))
        .build();
DeepSeekChatOptions options = DeepSeekChatOptions.builder()
        .model(DeepSeekApi.ChatModel.DEEPSEEK_V4_PRO.getValue())
        .temperature(0.4)
        .maxTokens(200)
        .build();
DeepSeekChatModel chatModel = DeepSeekChatModel.builder()
        .deepSeekApi(deepSeekApi)
        .options(options)
        .build();
ChatResponse response = chatModel.call(
    new Prompt("Generate the names of 5 famous pirates."));

// Or with streaming responses
Flux<ChatResponse> streamResponse = chatModel.stream(
    new Prompt("Generate the names of 5 famous pirates."));
```

The `DeepSeekChatOptions` provides the configuration information for the chat requests.
The `DeepSeekChatOptions.Builder` is a fluent options builder.

<a id="low-level-api"></a>

### Low-level DeepSeekApi Client

The [DeepSeekApi](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-deepseek/src/main/java/org/springframework/ai/deepseek/api/DeepSeekApi.java) is a lightweight Java client for [DeepSeek API](https://platform.deepseek.com/api-docs/).

Here is a simple snippet showing how to use the API programmatically:

```java
DeepSeekApi deepSeekApi =
    new DeepSeekApi(System.getenv("DEEPSEEK_API_KEY"));

ChatCompletionMessage chatCompletionMessage =
    new ChatCompletionMessage("Hello world", Role.USER);

// Sync request
ResponseEntity<ChatCompletion> response = deepSeekApi.chatCompletionEntity(
    new ChatCompletionRequest(List.of(chatCompletionMessage), DeepSeekApi.ChatModel.DEEPSEEK_V4_FLASH.getValue(), 0.7, false));

// Streaming request
Flux<ChatCompletionChunk> streamResponse = deepSeekApi.chatCompletionStream(
    new ChatCompletionRequest(List.of(chatCompletionMessage), DeepSeekApi.ChatModel.DEEPSEEK_V4_FLASH.getValue(), 0.7, true));
```

Follow the [DeepSeekApi.java](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-deepseek/src/main/java/org/springframework/ai/deepseek/api/DeepSeekApi.java)'s JavaDoc for further information.

<a id="_deepseekapi_samples"></a>

#### DeepSeekApi Samples

- The [DeepSeekApiIT.java](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-deepseek/src/test/java/org/springframework/ai/deepseek/api/DeepSeekApiIT.java) test provides some general examples of how to use the lightweight library.
